--- a/marketing/public/index.html
+++ b/marketing/public/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head> </head>
-  <body></body>
+  <body>
+    <div id="_marketing-frontend-development-only"></div>
+  </body>
 </html>
